platform/identity/keycloak/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-internal
  namespace: identity
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - name: internal-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - keycloak.bxota.com
  rules:
    - backendRefs:
        - name: keycloak-keycloakx-http
          port: 80
