platform/identity/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: identity
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - keycloak.15.224.195.86.sslip.io
  rules:
    - backendRefs:
        - name: keycloak-keycloakx-http
          port: 80
